@@ -1,7 +1,6 @@
-package test;
+package donnees;
 
 import XML.ChargeurMagasin;
-import donnees.*;
 import org.junit.jupiter.api.Test;
 
 import java.io.FileNotFoundException;
@@ -25,7 +24,6 @@ class MagasinTest {
         ChargeurMagasin cm = new ChargeurMagasin("fichiers");
         Magasin m = cm.chargerMagasin();
         m.trierArtiste();
-        System.out.println(m);
         ComparateurArtiste comp = new ComparateurArtiste();
         assertTrue(comp.etreAvant(m.getCd(0), m.getCd(11)), "Le 1er CD devrait être avant le dernier. ");
     }
@@ -36,8 +34,8 @@ class MagasinTest {
         Magasin m = cm.chargerMagasin();
         ArrayList<CD> cdZebda = m.chercherArtiste("Zebda");
         assertEquals(1, cdZebda.size(), "La liste devrait contenir 1 CD. ");
-        assertEquals("Zebda", cdZebda.get(0).getNomArtiste(), "L'artiste devrait être \"Céline Dion\". ");
-        assertEquals("Essence ordinaire", cdZebda.get(0).getNomCD(), "Le titre devrait être \"Essence ordinaire\". ");
+        assertEquals("Zebda", cdZebda.getFirst().getNomArtiste(), "L'artiste devrait être \"Céline Dion\". ");
+        assertEquals("Essence ordinaire", cdZebda.getFirst().getNomCD(), "Le titre devrait être \"Essence ordinaire\". ");
     }
 
     @Test
@@ -46,7 +44,59 @@ class MagasinTest {
         Magasin m = cm.chargerMagasin();
         ArrayList<CD> cdZebda = m.chercherTitre("Essence ordinaire");
         assertEquals(1, cdZebda.size(), "La liste devrait contenir 1 CD. ");
-        assertEquals("Zebda", cdZebda.get(0).getNomArtiste(), "L'artiste devrait être \"Céline Dion\". ");
-        assertEquals("Essence ordinaire", cdZebda.get(0).getNomCD(), "Le titre devrait être \"Essence ordinaire\". ");
+        assertEquals("Zebda", cdZebda.getFirst().getNomArtiste(), "L'artiste devrait être \"Céline Dion\". ");
+        assertEquals("Essence ordinaire", cdZebda.getFirst().getNomCD(), "Le titre devrait être \"Essence ordinaire\". ");
+    }
+
+    @Test
+    void chercherMulti() throws FileNotFoundException {
+        ChargeurMagasin cm = new ChargeurMagasin("fichiers");
+        Magasin m = cm.chargerMagasin();
+        ArrayList<CD> cdSelecTeT1 = m.chercherTitreEtTitre("Bénabar", "Bénabar");
+        ArrayList<CD> cdSelecTeT2 = m.chercherTitreEtTitre("Bénabar", "Céline Dion");
+
+        assertEquals(1, cdSelecTeT1.size(), "La liste devrait contenir 1 CD. ");
+        assertEquals("Bénabar", cdSelecTeT1.getFirst().getNomArtiste(), "L'artiste devrait être \"Bénabar\". ");
+        assertEquals("Bénabar", cdSelecTeT1.getFirst().getNomCD(), "Le titre devrait être \"Bénabar\". ");
+
+        assertEquals(0, cdSelecTeT2.size(), "La liste ne devrait pas contenir de CD. ");
+
+        ArrayList<CD> cdSelecAeA1 = m.chercherArtisteEtArtiste("Bénabar", "Bénabar");
+        ArrayList<CD> cdSelecAeA2 = m.chercherArtisteEtArtiste("Bénabar", "Les Risques du métier");
+
+        assertEquals(2, cdSelecAeA1.size(), "La liste devrait contenir 2 CD. ");
+        assertEquals("Bénabar", cdSelecAeA1.getFirst().getNomArtiste(), "L'artiste devrait être \"Bénabar\". ");
+        assertEquals("Bénabar", cdSelecAeA1.getFirst().getNomCD(), "Le titre devrait être \"Bénabar\". ");
+
+        assertEquals(0, cdSelecAeA2.size(), "La liste ne devrait pas contenir de CD. ");
+
+        ArrayList<CD> cdSelecTeA1 = m.chercherTitreEtArtiste("Bénabar", "Bénabar");
+        ArrayList<CD> cdSelecTeA2 = m.chercherTitreEtArtiste("Let's Talk About Love", "Bénabar");
+
+        assertEquals(1, cdSelecTeA1.size(), "La liste devrait contenir 1 CD. ");
+        assertEquals("Bénabar", cdSelecTeA1.getFirst().getNomArtiste(), "L'artiste devrait être \"Bénabar\". ");
+        assertEquals("Bénabar", cdSelecTeA1.getFirst().getNomCD(), "Le titre devrait être \"Bénabar\". ");
+
+        assertEquals(0, cdSelecTeA2.size(), "La liste ne devrait pas contenir de CD. ");
+
+        ArrayList<CD> cdSelecToT = m.chercherTitreOuTitre("Bénabar", "Les Risques du métier");
+        ArrayList<CD> cdSelecAoA = m.chercherArtisteOuArtiste("Bénabar", "Céline Dion");
+        ArrayList<CD> cdSelecToA = m.chercherTitreOuArtiste("Let's Talk About Love", "Bénabar");
+
+        assertEquals(2, cdSelecToT.size(), "La liste devrait contenir 2 CDs. ");
+        assertEquals("Bénabar", cdSelecToT.getFirst().getNomArtiste(), "L'artiste devrait être \"Bénabar\". ");
+        assertEquals("Bénabar", cdSelecToT.getFirst().getNomCD(), "Le titre devrait être \"Bénabar\". ");
+        assertEquals("Bénabar", cdSelecToT.getLast().getNomArtiste(), "L'artiste devrait être \"Bénabar\". ");
+        assertEquals("Les Risques du métier", cdSelecToT.getLast().getNomCD(), "Le titre devrait être \"Les Risques du métier\". ");
+
+        assertEquals(3, cdSelecAoA.size(), "La liste devrait contenir 3 CDs. ");
+
+        assertEquals(3, cdSelecToA.size(), "La liste devrait contenir 3 CDs. ");
+
+        ArrayList<CD> cdSelecNt = m.chercherNonTitre("Bénabar");
+        ArrayList<CD> cdSelecNa = m.chercherNonArtiste("Bénabar");
+
+        assertEquals(11, cdSelecNt.size(), "La liste devrait contenir 10 CDs");
+        assertEquals(10, cdSelecNa.size(), "La liste devrait contenir 11 CDs");
     }
 }
